...
                                .lineLimit(2)
                        }
                        Spacer()
                        Button(action: {
                            selectedDish = dish // Open the sheet for editing
                        }) {
                            Image(systemName: "pencil")
                                .foregroundColor(Color("AccentColor"))
                        }
                    }
                    .listRowBackground(Color("SecondaryBackgroundColor"))
                }
                .onDelete(perform: deleteDishes)
...
